# secret-stones-game

./: .gitignore  CMakeLists.txt  Makefile  game.cpp  game.hpp  main  main.cpp
assets/: CMakeLists.txt
assets/cards/: CMakeLists.txt
executables/: CMakeLists.txt  main.cpp
libraries/: CMakeLists.txt
libraries/conditions/: CMakeLists.txt  conditions.cpp  conditions.hpp
libraries/game/: CMakeLists.txt  game.cpp  game.hpp
libraries/game_objects/: CMakeLists.txt  game_object.cpp  game_object.hpp  game_objects.hpp
libraries/game_objects/card/: CMakeLists.txt  card.cpp  card.hpp
libraries/game_objects/field/: CMakeLists.txt  field.cpp  field.hpp
libraries/game_objects/interface/: CMakeLists.txt  interface.cpp
libraries/game_objects/interface_objects/: CMakeLists.txt  interface_objects.cpp  interface_objects.hpp
libraries/game_objects/pull/: CMakeLists.txt  pull.cpp  pull.hpp
libraries/pull/: CMakeLists.txt  pull.cpp  pull.hpp
libraries/states/: CMakeLists.txt
libraries/states/gameOver/: CMakeLists.txt  gameOver.cpp  gameOver.hpp
libraries/states/menu/: CMakeLists.txt  menu.cpp  menu.hpp
libraries/states/party/: CMakeLists.txt  party.cpp  party.hpp
libraries/states/party/turn/: CMakeLists.txt  turn.cpp  turn.hpp
libraries/states/rules/: CMakeLists.txt  rules.cpp  rules.hpp
libraries/text/: CMakeLists.txt  text.cpp  text.hpp
libraries/texture_manager/: CMakeLists.txt  texture_manager.cpp  texture_manager.hpp
src/: CMakeLists.txt
src/inc/SDL2/: CMakeLists.txt  SDL2  SDL_ttf.h
