add_subdirectory(cards)
file(COPY mouses.png DESTINATION ${CMAKE_BINARY_DIR}/assets)

file(COPY satrtButton.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY activeStartButton.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY rulesButton.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY activeRulesButton.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY exitButton.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY activeExitButton.png DESTINATION ${CMAKE_BINARY_DIR}/assets)

file(COPY goBackButton.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY activeGoBack.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY rules.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY note.png DESTINATION ${CMAKE_BINARY_DIR}/assets)

file(COPY toMenu.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY toMenuSelected.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY gameOver.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY win.png DESTINATION ${CMAKE_BINARY_DIR}/assets)

file(COPY selectedRed.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY deselectedRed.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY selectedBlue.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY deselectedBlue.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY selectedGreen.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY deselectedGreen.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY selectedOrange.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY deselectedOrange.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY selectedYellow.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY deselectedYellow.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY selectedPurple.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY deselectedPurple.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY selectedWhite.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY deselectedWhite.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY selectedBlack.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY deselectedBlack.png DESTINATION ${CMAKE_BINARY_DIR}/assets)

file(COPY selectedBlankCard.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY unselectedBlankCard.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY deck.png DESTINATION ${CMAKE_BINARY_DIR}/assets)


file(COPY endTurnButton.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY activeEndTurnButton.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY activeDropGetButton.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY dropGetButton.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY back.png DESTINATION ${CMAKE_BINARY_DIR}/assets)

file(COPY strikes0.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY strikes1.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY strikes2.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY strikes3.png DESTINATION ${CMAKE_BINARY_DIR}/assets)

file(COPY movesLeft0.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY movesLeft1.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY movesLeft2.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY movesLeft3.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY movesLeft4.png DESTINATION ${CMAKE_BINARY_DIR}/assets)